# RustAPI

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  about.md  changelog.md  mod.json  support.md  wrapper.h
.github/workflows/: multi-platform.yml
docs/: README.md
docs/cocos/: cocos_color_provider.md  cocos_color_utils.md  cocos_intro.md  cocos_nodes.md
docs/filesystem/: fs_intro.md  fs_operations.md  fs_read_write.md
docs/getting-started/: ci.md  first_mod.md  intro.md  project_structure.md
docs/imgui/: imgui_intro.md  imgui_layout.md  imgui_popups.md  imgui_style.md  imgui_tables.md  imgui_widgets.md  imgui_windows.md
docs/keyboard/: keyboard_intro.md  keyboard_listen.md  keyboard_modifiers.md
docs/mod/: mod_info.md  mod_intro.md  mod_logging.md  mod_settings.md
docs/task/: task_intro.md  task_scheduling.md  task_time.md
docs/utils/: base64.md  game.md  json.md  keybind.md  permission.md  platform.md  popup.md  random.md  thread.md  ui.md  version.md
docs/web/: web_fetch.md  web_intro.md  web_open_link.md  web_request_builder.md  web_response.md
include/: RustAPI.hpp
src/: ffi.rs  lib.rs  main.cpp  runtime.rs  tests.rs
src/bindings/: clipboard.cpp  cocos_color.cpp  cocos_nodes.cpp  filesystem.cpp  geode.rs  helpers.hpp  imgui.rs  imgui_bindings.cpp  json_base64.cpp  keybind_web.cpp  keyboard.cpp  logging.cpp  mod.rs  mod_info.cpp  nodes.cpp  permission.cpp  popup.cpp  task.rs  task_bindings.cpp  task_scheduler.cpp  utils_misc.cpp  version_color.cpp  websocket.rs
src/scripts/: bootstrap.rs
testmod/: CMakeLists.txt  Cargo.toml  README.md  mod.json
testmod/src/: Mod.cpp  lib.rs
