[package]
name = "rustapi"
version = "0.1.0"
edition = "2021"

[lib]
name = "rustapi"
crate-type = ["staticlib"]

[dependencies]
libc = "0.2"
lazy_static = "1.4"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
tungstenite = { version = "0.20", features = ["rustls-tls-native-roots"] }
url = "2.4"

[build-dependencies]
cc = "1.0"